// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video with callbacks 1`] = `
<div
  className="player"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    autoPlay={false}
    className="video"
    muted={false}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onTimeUpdate={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with children 1`] = `
<div
  className="player"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    autoPlay={false}
    className="video"
    muted={false}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onTimeUpdate={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
  <div
    className="absolute bottom0 box left0 overflowHidden right0 top0"
  >
    <div>
      overlay
    </div>
  </div>
  <div
    className="controls"
  >
    <div
      className="box paddingX2 paddingY2"
    >
      <div
        className="touchable pointer rounding0"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex="0"
      >
        <svg
          aria-hidden={null}
          aria-label="Play"
          className="icon white iconBlock"
          height={20}
          role="img"
          viewBox="0 0 24 24"
          width={20}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <div
        className="Text fontSize1 white alignRight breakWord fontWeightNormal"
      >
        00:00
      </div>
    </div>
    <div
      className="box flexGrow paddingX2 paddingY2"
    >
      <div
        className="box flexGrow itemsCenter relative xsDisplayFlex"
        style={
          Object {
            "height": 16,
          }
        }
      >
        <div
          aria-valuemax={0}
          aria-valuemin="0"
          aria-valuenow={0}
          className="playhead"
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          role="progressbar"
          tabIndex="-1"
        >
          <div
            className="absolute box left0 lightGrayBg right0 rounding2"
            style={
              Object {
                "height": 4,
              }
            }
          >
            <div
              className="box rounding2 whiteBg"
              style={
                Object {
                  "height": "100%",
                  "width": "NaN%",
                }
              }
            />
          </div>
          <div
            className="absolute box rounding2"
            style={
              Object {
                "height": 4,
                "left": "NaN%",
              }
            }
          >
            <div
              className="box circle marginLeftN2 whiteBg"
              style={
                Object {
                  "height": 16,
                  "marginTop": -6,
                  "width": 16,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <div
        className="Text fontSize1 white alignRight breakWord fontWeightNormal"
      >
        00:00
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
    >
      <div
        className="touchable pointer rounding0"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex="0"
      >
        <svg
          aria-hidden={null}
          aria-label="Mute"
          className="rtlSupport icon white iconBlock"
          height={20}
          role="img"
          viewBox="0 0 24 24"
          width={20}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video with media attributes 1`] = `
<div
  className="player"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    autoPlay={false}
    className="video"
    loop={true}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onTimeUpdate={[Function]}
    preload="metadata"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with multiple sources 1`] = `
<div
  className="player"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    autoPlay={false}
    className="video"
    muted={false}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onTimeUpdate={[Function]}
    preload="auto"
  >
    <source
      src="https://archive.org/download/ElephantsDream/ed_1024_512kb.mp4"
      type="video/mp4"
    />
    <source
      src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
      type="video/ogg"
    />
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with source 1`] = `
<div
  className="player"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    autoPlay={false}
    className="video"
    muted={false}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onTimeUpdate={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;
